hphp/test/slow/ternary/1734.php.expectf
Catchable fatal error: Argument 1 passed to mysql_data_seek() must be an instance of resource, null given in %s/test/slow/ternary/1734.php on line 7
